Jakub's comments + remove forbidden chars from connector name in MM2
Signed-off-by: Lukas Kral <lukywill16@gmail.com>